--- a/public/css/style.css
+++ b/public/css/style.css
@@ -258,6 +258,10 @@ input, select, textarea {
   margin-bottom: 10px;
 }
 
+.origins .select2-container {
+  width: 32.5%!important;
+}
+
 .date {
   display: flex;
   align-items: center;
